@@ -98,7 +98,7 @@ namespace CassandraSharp.Transport
             {
                 case ErrorCodes.Unavailable:
                     {
-                        ConsistencyLevel cl = (ConsistencyLevel) stream.ReadShort();
+                        ConsistencyLevel cl = (ConsistencyLevel) stream.ReadUShort();
                         int required = stream.ReadInt();
                         int alive = stream.ReadInt();
                         return new UnavailableException(msg, cl, required, alive);
@@ -106,7 +106,7 @@ namespace CassandraSharp.Transport
 
                 case ErrorCodes.WriteTimeout:
                     {
-                        ConsistencyLevel cl = (ConsistencyLevel) stream.ReadShort();
+                        ConsistencyLevel cl = (ConsistencyLevel) stream.ReadUShort();
                         int received = stream.ReadInt();
                         int blockFor = stream.ReadInt();
                         string writeType = stream.ReadString();
@@ -115,7 +115,7 @@ namespace CassandraSharp.Transport
 
                 case ErrorCodes.ReadTimeout:
                     {
-                        ConsistencyLevel cl = (ConsistencyLevel) stream.ReadShort();
+                        ConsistencyLevel cl = (ConsistencyLevel)stream.ReadUShort();
                         int received = stream.ReadInt();
                         int blockFor = stream.ReadInt();
                         bool dataPresent = 0 != stream.ReadByte();
