@@ -5,12 +5,16 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "CassandraSharp-net45", "Cas
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{220BEE49-7E3C-40D9-B58C-A5299F55419E}"
 	ProjectSection(SolutionItems) = preProject
+		cassandra-sharp-core.nuspec = cassandra-sharp-core.nuspec
+		cassandra-sharp-interfaces.nuspec = cassandra-sharp-interfaces.nuspec
+		cassandra-sharp-tools.nuspec = cassandra-sharp-tools.nuspec
 		cassandra-sharp.nuspec = cassandra-sharp.nuspec
 		cassandra-sharp.targets = cassandra-sharp.targets
 		CHANGES.txt = CHANGES.txt
 		LICENSE-2.0.txt = LICENSE-2.0.txt
 		README.md = README.md
 		TODO.txt = TODO.txt
+		Version.xml = Version.xml
 	EndProjectSection
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "CassandraSharpUnitTests-net45", "CassandraSharpUnitTests\CassandraSharpUnitTests-net45.csproj", "{22D4356F-BC92-4399-A92C-C1F9EF6ECC73}"
